--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- google font linking here -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">			
 <!-- style.css linking here -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!--header start-->
@@ -16,7 +16,7 @@
 <div class="row">
 	<div class="col-6">
 <a href="index.html" class="logo"> 
-<img src="images/dark.svg">
+<img src="dark.svg">
 </a>
 </div>
 <div class="col-6">
@@ -41,7 +41,7 @@
 <div class="col-12">
   <h1>It's time to amplify your <br> <span> Online business</span></h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Debitis provident modi sequi, repellendus voluptatum officiis aspernatur ex, dignissimos. <br>cupiditate eius harum pariatur culpa ducimus eligendi minima hic suscipit enim dolorum!</p>
-  <img src="images/illustration-1.svg" alt="">
+  <img src="illustration-1.svg" alt="">
 			</div>
 		</div>
 	</div>	
@@ -74,21 +74,21 @@
 		<div class="row">
 			<div class ="col-3">
 				<div class="feature-inner bg-1">
-				<img src="images/illustration-5.svg">	
+				<img src="illustration-5.svg">	
 				<h4>unleash your creativity</h4>
 				<p> orem ipsum dolor sit amet consectetur adipisicing<br> elit.error quisquam debitis fugit assumenda </br> dolor aliquam</p>
 				</div>
 			</div>
 			<div class ="col-3">
 				<div class="feature-inner bg-2">
-				<img src="images/illustration-6.svg">	
+				<img src="/illustration-6.svg">	
 				<h4>unleash your creativity</h4>
 				<p> orem ipsum dolor sit amet consectetur adipisicing<br> elit.error quisquam debitis fugit assumenda </br> dolor aliquam</p>
 				</div>
 			</div>
 			<div class ="col-3">
 				<div class="feature-inner bg-3">
-				<img src="images/illustration-7.svg">	
+				<img src="illustration-7.svg">	
 				<h4>unleash your creativity</h4>
 				<p> orem ipsum dolor sit amet consectetur adipisicing<br> elit.error quisquam debitis fugit assumenda </br> dolor aliquam</p>
 				</div>
